--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 <!-- Page content-->
 <div class="container mt-5">
 <h1>Contact me</h1>
-<form class="row 3-g" class="https://formsubmit.co/lynnette@nettesemporium.com" method="post">
+<form class="row 3-g" action="https://formsubmit.co/lynnette@nettesemporium.com" method="post">
   <div class="col-md-6">
     <label for="firstName" class="form-label">First Name</label>
     <input type="text" class="form-control" id="firstName" required>
