--- a/index.html
+++ b/index.html
@@ -38,23 +38,23 @@
 <form class="row 3-g" action="https://formsubmit.co/lynnette@nettesemporium.com" method="post">
   <div class="col-md-6">
     <label for="firstName" class="form-label">First Name</label>
-    <input type="text" class="form-control" id="firstName" required>
+    <input type="text" class="form-control" name="name" id="firstName" required>
   </div>
   <div class="col-md-6">
     <label for="lastName" class="form-label">Last Name</label>
-    <input type="text" class="form-control" id="lastName" required>
+    <input type="text" class="form-control" name="Last Name" id="lastName" required>
   </div>
   <div class="col-md-8">
     <label for="emailInfo" class="form-label">E-mail</label>
-    <input type="email" class="form-control" id="emailInfo" required>
+    <input type="email" class="form-control" name="Email" id="emailInfo" required>
   </div>
   <div class="col-md-4">
     <label for="phoneNumber" class="form-label">Phone Number</label>
-    <input type="text" class="form-control" id="phoneNumber" placeholder="+1(864)867-5309)">
+    <input type="text" class="form-control" name="phone" id="phoneNumber" placeholder="+1(864)867-5309)">
   </div>
   <div class="col-md-12">
     <label for="comments" class="form-label">Comments or questions?</label>
-    <textarea class="form-control" id="comments" rows="3" required></textarea>
+    <textarea class="form-control" name="Comments or Questions" id="comments" rows="3" required></textarea>
   </div>
   <div class="col-md-12">
     <button type="submit" class="btn btn-primary">Submit</button>
